--- a/Python/README
+++ b/Python/README
@@ -1,1 +1,3 @@
 
+
+The "Phi..." text files are the different N-sized Phi imported and used. SL0_Tx (Node) imports MicrophoneRecord and AudioFile python files depending on input source, while SL0_Rx (Sink) reconstructs and calculated RMS error.
