--- a/Matlab/README
+++ b/Matlab/README
@@ -1,1 +1,13 @@
-Matlab R2016a
+# Matlab R2016a
+
+BP - Basic Pursuit reconstruction algorithm
+create_Phi - create an N-sized Phi and saves to text file
+detect_Fmax - detect maximum frequency component in source to compare our system to traditional system sampling at Nyquist Rate
+detect_K - detect K-sparsity of source
+detect_Mu - detect coherence coefficient between used Phi and Psi
+detect_Noise - detects noise threshold of source
+estimate_SNR - additional error metric signal-to-noise ratio
+Matlab_SL0_TxRx - main file running CS Tx and Rx system using SL0 reconstruction
+SL0 - Smoothed L0 norm reconstructions algorithm
+
+Music files not provided
